added log on page and modified master/detail

--- a/QuickBucks/QuickBucks.iOS/QuickBucks.iOS.csproj
+++ b/QuickBucks/QuickBucks.iOS/QuickBucks.iOS.csproj
@@ -70,6 +70,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\ImageEntryRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -124,6 +125,9 @@
     <BundleResource Include="Resources\xamarin_logo%402x.png" />
     <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+    <BundleResource Include="Resources\email.png" />
+    <BundleResource Include="Resources\password.png" />
+    <BundleResource Include="Resources\user.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -140,7 +144,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\QuickBucks\QuickBucks.csproj">
-      <Project>{8A19E1C6-CBB5-456A-AA5C-DA5A4A022BD1}</Project>
+      <Project>{34C56A0D-CD70-4D61-B8AF-D6401F4FB2FD}</Project>
       <Name>QuickBucks</Name>
     </ProjectReference>
   </ItemGroup>
