--- a/QuickBucks/QuickBucks.Android/QuickBucks.Android.csproj
+++ b/QuickBucks/QuickBucks.Android/QuickBucks.Android.csproj
@@ -57,6 +57,15 @@
     <PackageReference Include="Xamarin.Android.Support.v4" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
+    <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
+      <Version>2.7.0</Version>
+    </PackageReference>
+    <PackageReference Include="CarouselView.FormsPlugin">
+      <Version>5.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamanimation">
+      <Version>1.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -103,6 +112,16 @@
       <Project>{34C56A0D-CD70-4D61-B8AF-D6401F4FB2FD}</Project>
       <Name>QuickBucks</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\acrobatics.json" />
+    <AndroidAsset Include="Assets\biking_is_cool.json" />
+    <AndroidAsset Include="Assets\bikingishard.json" />
+    <AndroidAsset Include="Assets\so_excited.json" />
+    <AndroidAsset Include="Assets\cash.json" />
+    <AndroidAsset Include="Assets\money.json" />
+    <AndroidAsset Include="Assets\wallet_coin.json" />
+    <AndroidAsset Include="Assets\wallet.json" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
