--- a/QuickBucks/QuickBucks/QuickBucks.csproj
+++ b/QuickBucks/QuickBucks/QuickBucks.csproj
@@ -12,6 +12,9 @@
   <ItemGroup>
     <PackageReference Include="IntelliAbb.Xamarin.Controls" Version="1.0.121-pre" />
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />  
+    <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="2.7.0" />
+    <PackageReference Include="CarouselView.FormsPlugin" Version="5.2.0" />
+    <PackageReference Include="Xamanimation" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,5 +39,12 @@
   <ItemGroup>
     <Compile Remove="Views\Test\MyPage.xaml.cs" />
     <Compile Remove="Views\Onboarding\Login.xaml.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Views\Onboarding\Walkthrough\AcrobaticsView.xaml" />
+    <None Include="Views\Onboarding\Walkthrough\BikingCoolView.xaml" />
+    <None Include="Views\Onboarding\Walkthrough\BikingHardView.xaml" />
+    <None Include="Views\Onboarding\Walkthrough\SoExcitedView.xaml" />
+    <None Include="Views\Onboarding\Walkthrough\WalkthroughView.xaml" />
   </ItemGroup>
 </Project>
