--- a/QuickBucks/QuickBucks.Android/QuickBucks.Android.csproj
+++ b/QuickBucks/QuickBucks.Android/QuickBucks.Android.csproj
@@ -51,7 +51,7 @@
     <PackageReference Include="IntelliAbb.Xamarin.Controls">
       <Version>1.0.121-pre</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="27.0.2.1" />
