commit for auto build

--- a/QuickBucks/QuickBucks.iOS/QuickBucks.iOS.csproj
+++ b/QuickBucks/QuickBucks.iOS/QuickBucks.iOS.csproj
@@ -28,6 +28,8 @@
     <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
+    <CodesignProvision>QuikBuks</CodesignProvision>
+    <CodesignKey>iPhone Distribution: Yemi Gabriel (2EYKMSN9F8)</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
