--- a/QuickBucks/QuickBucks.Android/QuickBucks.Android.csproj
+++ b/QuickBucks/QuickBucks.Android/QuickBucks.Android.csproj
@@ -57,14 +57,14 @@
     <PackageReference Include="Xamarin.Android.Support.v4" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
-    <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
-      <Version>2.7.0</Version>
-    </PackageReference>
     <PackageReference Include="CarouselView.FormsPlugin">
       <Version>5.2.0</Version>
     </PackageReference>
     <PackageReference Include="Xamanimation">
       <Version>1.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
+      <Version>2.6.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -105,6 +105,15 @@
     <AndroidResource Include="Resources\drawable-xhdpi\ic_menu.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_menu.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_menu.png" />
+    <AndroidResource Include="Resources\drawable\acrobatics.json" />
+    <AndroidResource Include="Resources\drawable\biking_is_cool.json" />
+    <AndroidResource Include="Resources\drawable\bikingishard.json" />
+    <AndroidResource Include="Resources\drawable\cash.json" />
+    <AndroidResource Include="Resources\drawable\money.json" />
+    <AndroidResource Include="Resources\drawable\so_excited.json" />
+    <AndroidResource Include="Resources\drawable\wallet.json" />
+    <AndroidResource Include="Resources\drawable\wallet_coin.json" />
+    <AndroidResource Include="Resources\drawable\tab_feed.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable-hdpi\" />
